[package]
name = "dotsrepl"
version = "0.1.0"
edition = "2021"
description  = "Rust CLI for Dotfiles."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
termcolor = "1.4.1"
shellexpand = "3.1.0"
dirs = "5.0.1"

[profile.release]
opt-level = 3       # 最高レベルの最適化
lto = true          # リンク時最適化
codegen-units = 1   # 単一コード生成ユニット
strip = true        # バイナリサイズ削減
